# Project_FER_Turret

./: .gitignore
STL fileovi/: Bearing_Outer_Ring.stl  Drzac_za_kameru.stl  Granicnik.stl  Honeycomb.stl  Nosac_bez_rupe.stl  Poklopac za bazu.stl
STL fileovi/STL fileovi za print/: Baza+zupcanik.stl  Toranj za servo.stl  Zupcanik za stepper.stl
src/Camera_module/: README.md
src/Camera_module/ESPCam/: ESPCam.ino
src/Gamepad_host/: Gamepad_testParser.py
src/Gamepad_host/ESP32_Gamepad/main/: CMakeLists.txt  gamepad_logic.cpp  led_logic.cpp  sketch.cpp
src/Gamepad_host/ESP32_Gamepad/main/include/: gamepad_logic.h  led_logic.h
src/Master_controler/Turret_master/: .cproject  .project  Turret_master Debug.launch  Turret_master.ioc
src/Master_controler/Turret_master/Core/Inc/: gamepad_logic.h  main.h
src/Master_controler/Turret_master/Core/Src/: gamepad_logic.c  main.c  stm32f4xx_hal_msp.c
wiring/: turret.fzz
